# StewBeet

./: .gitignore  README.md  build.py  clean.py  cmd_cache.json  config.py  database_debug.json  debug_manual.json  upload.py  watcher.py  word_cloud.MD  word_cloud.wcld2
python_package/: 3_upload.py  README.md  TODO.md  all_doctests.py  github_release.py  pyproject.toml
python_package/scripts/: all_doctests.py  check_bookshelf_version.py  create_docs.py  github_release.py  on_bookshelf_release.py  pypi_full_routine.py
python_package/src/python_datapack/: __init__.py  __memory__.py  cli.py  debug_info.py  enhance_config.py  finalyze.py  initialize.py  verify_database.py
python_package/src/python_datapack/compatibilities/: neo_enchant.py  simpledrawer.py
python_package/src/python_datapack/continuous_delivery/: cd_utils.py
python_package/src/python_datapack/datapack/: custom_blocks.py  loading.py  loot_tables.py  recipes.py
python_package/src/python_datapack/manual/: craft_content.py  iso_renders.py  main.py  other_utils.py
python_package/src/python_datapack/resource_pack/: item_models.py  power_of_2.py
python_package/src/stewbeet/: cli.py
python_package/src/stewbeet/continuous_delivery/: cd_utils.py  github.py
python_package/src/stewbeet/core/: __init__.py  __memory__.py  (+1 more)
python_package/stewbeet/: __init__.py  __main__.py  all.py  cli.py  utils.py
python_package/stewbeet/continuous_delivery/: cd_utils.py
python_package/stewbeet/core/: __init__.py  __memory__.py  constants.py
python_package/stewbeet/dependencies/: bookshelf.py  bookshelf_config.json
(+3818 files in other folders)
