
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stewbeet"
version = "0.0.1"
authors = [
	{ name="Stoupy51", email="stoupy51@gmail.com" },
]
description = "Beet Framework made to help generating advanced Minecraft datapack contents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"stouputils>=1.3.12",
	"model_resolver>=1.8.0",
    "bolt>=0.49.1",
	"smithed>=0.19.0",
	"mutagen>=1.47.0",
	"pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Stoupy51/stewbeet"
Issues = "https://github.com/Stoupy51/stewbeet/issues"

[project.scripts]
stewbeet = "stewbeet.cli:main"

[tool.pyright]
typeCheckingMode = "basic"

[tool.setuptools]
license-files = ["LICENSE"]

